--- a/app/src/main/res/layout/content_statistic.xml
+++ b/app/src/main/res/layout/content_statistic.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,81 +8,111 @@
     tools:context="com.example.takethraithip.myproject.Statistic"
     tools:showIn="@layout/app_bar_statistic">
 
-
-    <com.github.mikephil.charting.charts.BarChart
-
-        android:id="@+id/statBarchart"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:paddingTop="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline16"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/testValue">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-    </com.github.mikephil.charting.charts.BarChart>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/stat_text">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/testValue"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="All Statistic Chart"
+            android:textSize="16dp"
+            android:textStyle="bold"
 
-    <TextView
-        android:id="@+id/testValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="All Statistic Chart"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:layout_centerHorizontal="true"
+
+            />
+
+            <com.github.mikephil.charting.charts.BarChart
+
+                android:id="@+id/statBarchart"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_below="@+id/testValue"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp">
+
+            </com.github.mikephil.charting.charts.BarChart>
+
+            <com.github.mikephil.charting.charts.BarChart
+
+                android:id="@+id/dailyBarchart"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_below="@+id/testValue"
+                >
+
+            </com.github.mikephil.charting.charts.BarChart>
+            <TextView
+                android:id="@+id/waterPieTxt"
+                android:layout_marginTop="16dp"
+                android:layout_below="@+id/statBarchart"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Drinking water Last week statistic."
+                android:textStyle="bold"
+                android:textSize="16dp"
+                android:layout_centerHorizontal="true"
+
+                />
+
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/waterPie"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_below="@+id/waterPieTxt"
+                android:layout_centerHorizontal="true">
+
+            </com.github.mikephil.charting.charts.PieChart>
 
 
-    <com.github.mikephil.charting.charts.BarChart
+            <TextView
+                android:id="@+id/lightPieTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/waterPie"
+                android:layout_marginTop="16dp"
+                android:text="Eye rested last week statistic"
+                android:textStyle="bold"
+                android:textSize="16dp"
+                android:layout_centerHorizontal="true"
+                />
 
-        android:id="@+id/dailyBarchart"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:paddingTop="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline16"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/testValue">
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/lightPie"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_below="@+id/lightPieTxt"
+                android:layout_centerHorizontal="true">
 
-    </com.github.mikephil.charting.charts.BarChart>
+            </com.github.mikephil.charting.charts.PieChart>
 
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/waterPie"
-        android:layout_width="175dp"
-        android:layout_height="175dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline16"></com.github.mikephil.charting.charts.PieChart>
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        </RelativeLayout>
 
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/lightPie"
-        android:layout_width="175dp"
-        android:layout_height="175dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline16"></com.github.mikephil.charting.charts.PieChart>
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
 
-</android.support.constraint.ConstraintLayout>
+
+
+
+    </LinearLayout>
+</ScrollView>
